# configure.in for mod_defensible
# © 2007 Julien Danjou <julien@danjou.info>

AC_INIT(mod_defensible)
AM_INIT_AUTOMAKE(mod_defensible, 1.1)

AC_CONFIG_SRCDIR(mod_defensible.c) 

AC_PROG_CC
AM_PROG_LIBTOOL

# check for apxs tool 
AC_PATH_PROG(APXS2, [apxs2])

AC_ARG_WITH(udns, 
        [  --with-udns             use udns library to resolve (better performance)],
        with_udns=yes, 
        with_udns=no 
) 
if test "${with_udns}" = yes
then
     AC_CHECK_LIB([udns], [dns_init],
         ,
         AC_MSG_ERROR([udns not found]))
     AC_DEFINE_UNQUOTED(HAVE_UDNS, 1, [Define to 1 if udns is available])
fi
AC_SUBST(UDNS_LIBS, [-ludns])

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile mod_defensible.h) 
