# configure.in for mod_defensible
# © 2007 Julien Danjou <julien@danjou.info>

AC_INIT(mod_defensible)
AM_INIT_AUTOMAKE(mod_defensible, 1.2)

AC_CONFIG_SRCDIR(mod_defensible.c)

AC_PROG_CC
AM_PROG_LIBTOOL

# check for apxs tool
AC_PATH_PROG(APXS2, [apxs2])

AC_ARG_WITH(udns,
        [  --with-udns             use udns library to resolve (better performance)],
        [AC_CHECK_LIB([udns], [dns_init],
            ,
            AC_MSG_ERROR([udns not found]))
        ],
)
AC_SUBST(UDNS_LIBS)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
